# projeto_radar

./: CMakeLists.txt  Kconfig  dummy_dc.overlay  justfile  overlay-nsos.conf  prj.conf  qemu_cortex_m3.overlay  readme.md  west.yml
include/: camera_lpr_thread.h  canais.h  display.h  main.h  net_sample_common.h  sensor.h  system.h  system_thread.h
src/: Kconfig  camera_lpr_thread.c  canais.c  display.c  main.c  main_thread.c  sensor.c  system.c  system_thread.c
tests/infracao/: CMakeLists.txt  Kconfig  prj.conf  test_infracao.c
tests/sensor/: CMakeLists.txt  prj.conf  qemu_cortex_m3.overlay  test_sensor.c  testcase.yaml
tests/validar_placa/: CMakeLists.txt  qemu_cortex_m3.overlay  test_validacao.c
